Fixed LIR typing bugs in recursion frame-slurping code (bug 520536, r=gal).