js/src/jsrecursion.cpp
@@ -586,11 +586,11 @@ JS_REQUIRES_STACK LIns*
 TraceRecorder::slurpBoolSlot(LIns* val_ins, jsval* vp, VMSideExit* exit)
 {
     guard(true,
-          lir->ins2(LIR_eq,
+          lir->ins2(LIR_peq,
                     lir->ins2(LIR_piand, val_ins, INS_CONSTWORD(JSVAL_TAGMASK)),
                     INS_CONSTWORD(JSVAL_SPECIAL)),
           exit);
-    LIns* bool_ins = lir->ins2(LIR_pirsh, val_ins, INS_CONSTWORD(JSVAL_TAGBITS));
+    LIns* bool_ins = lir->ins2(LIR_pirsh, val_ins, INS_CONST(JSVAL_TAGBITS));
     bool_ins = p2i(bool_ins);
     return bool_ins;
 }
@@ -599,7 +599,7 @@ JS_REQUIRES_STACK LIns*
 TraceRecorder::slurpStringSlot(LIns* val_ins, jsval* vp, VMSideExit* exit)
 {
     guard(true,
-          lir->ins2(LIR_eq,
+          lir->ins2(LIR_peq,
                     lir->ins2(LIR_piand, val_ins, INS_CONSTWORD(JSVAL_TAGMASK)),
                     INS_CONSTWORD(JSVAL_STRING)),
           exit);
